[modernize] Use Short.valueOf instead of new Short